--- a/excred/style.css
+++ b/excred/style.css
@@ -1,1 +1,93 @@
+  /*
+    Program name: style.css
+    Author: Hoan My Le
+    Date created: 2025-11-14
+    Date last edited: 2025-12-06
+    Version: 1.0
+    Description: MIS 3371 Homework 4...
+*/
+.border {
+  display: inline-block;
+  font-weight: bold;
+  font-family: Calibri;
+  background-color: #eef1ff;
+  border: 1px solid #97a1d8; 
+  padding: 10px 15px; 
+  margin: 10px 0;
+  width:500px;           
+  }
 
+.border2 {
+  display: inline-block;
+  font-weight: bold;
+  font-family: Calibri;
+  background-color: #ffe6cc;
+  border: 1px solid #d79b00; 
+  padding: 10px 15px; 
+  margin: 10px 0;
+  width:500px;           
+  }
+
+.border3 {
+  display: inline-block;
+  font-weight: bold;
+  font-family: Calibri;
+  background-color: #f6e8fc;
+  border: 1px solid #a887b8; 
+  padding: 10px 15px; 
+  margin: 10px 0;
+  width:500px;           
+  }
+
+.form {
+  background-color: #fafafa;
+  border-spacing: 10px;
+  }
+
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: white;
+
+}
+
+table.output, tr.output, td.output {
+  width: 80%;
+  opacity: 0.9;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color:#0f3889;
+  padding: 2px;
+  border-spacing: 2px;
+  color:white;
+}
+td.outputdata {
+  width: 80%;
+  opacity: 0.9;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color:white;
+  padding: 2px;
+  border-spacing: 2px;
+  color:black;
+}
+
+.header {
+  position: sticky;
+  top: 0;
+  padding: 10px 16px;
+  background: white;
+}
+
+.content {
+  padding: 16px;
+}
+
+.footer {
+   position: fixed;
+   left: 0;
+   bottom: 0;
+   width: 100%;
+   background-color: #0f3889;
+   color: white;
+   text-align: center;
+   font-size: 15px;
+   font-family: Times New Roman;
+}
