--- a/excred/style.css
+++ b/excred/style.css
@@ -2,9 +2,9 @@
     Program name: style.css
     Author: Hoan My Le
     Date created: 2025-11-14
-    Date last edited: 2025-12-06
+    Date last edited: 2025-12-10
     Version: 1.0
-    Description: MIS 3371 Homework 4...
+    Description: MIS 3371 Extra Credit...
 */
 .border {
   display: inline-block;
